--- a/src/app.global.css
+++ b/src/app.global.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700');
 
-@import "~font-awesome/css/font-awesome.css";
-
 body {
+  background-color: #36393E;
+  color: white;
   font-family: 'Open Sans', sans-serif;
   margin: 0;
   padding: 0;
@@ -27,12 +27,12 @@ a {
 
 .content-container {
   bottom: 0;
-  left: 72px;
+  left: 54px;
   overflow-x: hidden;
   overflow-y: scroll;
   position: absolute;
   right: 0;
-  top: 52px;
+  top: 54px;
   transition: all 0.2s ease-out;
   width: auto;
 }
