--- a/src/components/SideBar.scss
+++ b/src/components/SideBar.scss
@@ -2,34 +2,113 @@
 
 .SideBar {
   align-items: center;
-  background-color: $darkest-grey;
+  background-color: $dark-grey;
   color: #fff;
   display: flex;
   flex-direction: column;
   height: auto;
   position: absolute;
   top: 0; right: 0; bottom: 0; left: 0;
-  width: 72px;
+  width: $u * 9;
   overflow-y: auto;
 }
 
 .Link {
-  background-color: $medium-grey;
+  background-color: $light-grey;
   border-radius: 50%;
   color: rgba(255, 255, 255, 0.6);
-  margin-top: 12px;
-  padding: 8px;
+  margin-top: $u * 4;
+  min-width: $u * 3;
+  padding: 8px 10px;
+  position: relative;
   transition: 0.2s all ease;
 
+  i {
+    font-size: 1.25rem;
+  }
+
+  .Bar {
+    opacity: 0;
+    left: -11px;
+  }
+
   &:hover {
-    background-color: $light-grey;
-    border-radius: 25%;
+    border-radius: 15%;
     color: #fff;
   }
 
   &.active {
     background-color: $as-blue;
-    border-radius: 25%;
+    border-radius: 15%;
+    color: #fff;
+
+    .Bar {
+      left: -9px;
+      opacity: 1;
+    }
+  }
+}
+
+.BotLink {
+  color: #ccc;
+
+  &:hover {
     color: #fff;
   }
+}
+
+.Bar {
+  background-color: #2091f3;
+  border-bottom-right-radius: 100%;
+  border-top-right-radius: 100%;
+  height: 38px;
+  position: absolute;
+  top: 0;
+  transition: 0.2s left ease;
+  width: 3px;
+}
+
+.Logo {
+  align-items: center;
+  box-shadow: 0 1px 4px #2c2c2c;
+  display: flex;
+  justify-content: center;
+  height: 54px;
+  min-height: 54px;
+  width: 100%;
+
+  img {
+    height: 25px;
+    width: 25px;
+  }
+}
+
+.Nav {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.TopNav {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.Divider {
+  background-color: #444;
+  height: 1px;
+  margin-bottom: 24px;
+  width: 65%;
+}
+
+.BotNav {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 24px;
+  width: 100%;
 }
