--- a/src/components/TopBar.scss
+++ b/src/components/TopBar.scss
@@ -7,10 +7,35 @@
   color: #fff;
   display: flex;
   height: $u * 9;
+  justify-content: space-between;
   position: absolute;
-  padding: 0 24px;
+  padding: 0 $u * 4;
   top: 0; right: 0; bottom: 0; left: $u * 9;
   width: auto;
   overflow-y: auto;
   z-index: 5;
+}
+
+.RightNav {
+  height: 100%;
+}
+
+.Profile {
+  align-items: center;
+  color: white;
+  display: flex;
+  height: 100%;
+
+  img {
+    border-radius: 50%;
+    height: $u * 4;
+    margin-right: $u * 2;
+    width: $u * 4;
+  }
+
+  p {
+    font-weight: 300;
+    font-size: 14px;
+    margin-right: $u;
+  }
 }
