Add top players

--- a/src/components/SideBar.scss
+++ b/src/components/SideBar.scss
@@ -18,6 +18,7 @@
   border-radius: 50%;
   color: rgba(255, 255, 255, 0.6);
   margin-top: $u * 4;
+  max-width: $u * 3;
   min-width: $u * 3;
   padding: 8px 10px;
   position: relative;
