--- a/src/components/Home/Player.scss
+++ b/src/components/Home/Player.scss
@@ -1,3 +1,5 @@
+@import "~@globalStyles";
+
 .PlayerContainer {
   display: flex;
   flex-basis: 30%;
@@ -8,7 +10,7 @@
   background-color: #FFC107;
   display: flex;
   justify-content: space-between;
-  padding: 12px;
+  padding: $u;
 }
 
 .Player {
@@ -16,18 +18,18 @@
   display: flex;
   background-color: #eee;
   color: black;
-  padding: 24px;
+  padding: $u * 4;
   padding-top: 0;
 
   img {
     border-radius: 50%;
-    margin-right: 12px;
-    width: 42px;
+    margin-right: $u * 2;
+    width: $u * 7;
   }
 }
 
 .ScoreContainer {
-  padding-top: 24px;
+  padding-top: $u * 4;
 }
 
 .Score {
