--- a/src/app.global.css
+++ b/src/app.global.css
@@ -4,7 +4,7 @@
 @import "~slick-carousel/slick/slick-theme.css";
 
 body {
-  background-color: #36393E;
+  background-color: #333840;
   color: white;
   font-family: 'Open Sans', sans-serif;
   margin: 0;
