--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,6 +1,6 @@
-$light-grey: #484B52;
-$medium-grey: #36393E;
-$dark-grey: #2F3136;
-$darkest-grey: #202226;
+$light-grey: #434956;
+$medium-grey: #333840;
+$dark-grey: #2c2f38;
+$darkest-grey: #1e2127;
 $as-blue: #2091f3;
 $gold: #FFC107;
