--- a/src/components/Tournament.scss
+++ b/src/components/Tournament.scss
@@ -19,6 +19,15 @@
 
   &:hover {
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+
+    .Info {
+      height: 96px;
+      margin-top: -54px;
+    }
+
+    .Overlay {
+      display: flex;
+    }
   }
 }
 
@@ -34,7 +43,10 @@
   border-bottom-left-radius: $u;
   border-bottom-right-radius: $u;
   padding: $u * 2;
+  padding-top: 24px;
+  position: relative;
   max-width: 330px;
+  transition: 0.3s margin-top cubic-bezier(.25,.8,.25,1);
   width: 100%;
 }
 
@@ -73,4 +85,89 @@
 
 .TourneyDate {
   margin-right: $u * 2;
+}
+
+.Prize {
+  align-items: center;
+  background-color: #36393E;
+  border-radius: 24px;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  display: flex;
+  font-size: 12px;
+  left: 50%;
+  padding: 6px 12px;
+  position: absolute;
+  top: -13.5px;
+  transform: translate(-50%);
+
+  p {
+    margin-left: 6px;
+  }
+
+  svg {
+    color: $gold;
+  }
+}
+
+.ImgContainer {
+  position: relative;
+}
+
+.Overlay {
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.7);
+  bottom: 0;
+  display: none;
+  flex-direction: column;
+  left: 0;
+  padding-top: 24px;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.PrimaryButton {
+  background: linear-gradient(hsl(194, 90%, 54%), hsl(208, 90%, 54%));
+  border-radius: 24px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
+  color: #fff;
+  display: block;
+  font-size: 12px;
+  font-weight: bold;
+  letter-spacing: 1.4px;
+  margin-bottom: 12px;
+  padding: 8px 26px;
+  transition: all .1s ease-out;
+  text-align: center;
+  text-transform: uppercase;
+  width: $u * 39;
+
+  &:hover {
+    background: linear-gradient(hsl(192, 90%, 54%), hsl(206, 90%, 54%));
+    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.3);
+  }
+}
+
+.SecondaryButton {
+  background: transparent;
+  border: 2px solid rgba(255, 255, 255, 0.6);
+  border-radius: 24px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
+  color: #fff;
+  display: block;
+  font-size: 12px;
+  font-weight: bold;
+  letter-spacing: 1.4px;
+  margin-bottom: 12px;
+  padding: 8px 26px;
+  transition: all .1s ease-out;
+  text-align: center;
+  text-transform: uppercase;
+  width: $u * 39;
+
+  &:hover {
+    background-color: rgba(0, 0, 0, 0.3);
+    border-color: $as-blue;
+    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.3);
+  }
 }
