Basic tournament page

--- a/src/components/TopBar.scss
+++ b/src/components/TopBar.scss
@@ -2,8 +2,8 @@
 
 .TopBar {
   align-items: center;
-  background-color: $medium-grey;
-  box-shadow: 0 1px 4px #2c2c2c;
+  background-color: $grey;
+  box-shadow: 0 1px 4px #222;
   color: #fff;
   display: flex;
   height: $u * 9;
