--- a/src/components/SideBar.scss
+++ b/src/components/SideBar.scss
@@ -11,6 +11,7 @@
   top: 0; right: 0; bottom: 0; left: 0;
   width: $u * 9;
   overflow-y: auto;
+  z-index: 5;
 }
 
 .Link {
@@ -59,7 +60,7 @@
 }
 
 .Bar {
-  background-color: #2091f3;
+  background-color: $as-blue;
   border-bottom-right-radius: 100%;
   border-top-right-radius: 100%;
   height: 38px;
@@ -71,7 +72,7 @@
 
 .Logo {
   align-items: center;
-  box-shadow: 0 1px 4px #2c2c2c;
+  box-shadow: 0 1px 4px #222;
   display: flex;
   justify-content: center;
   height: 54px;
