--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,6 +1,7 @@
 $light-grey: #434956;
-$medium-grey: #333840;
-$dark-grey: #2c2f38;
+$grey: #333840;
+$medium-grey: #2c2f38;
+$dark-grey: #282a33;
 $darkest-grey: #1e2127;
 $as-blue: #2091f3;
 $gold: #FFC107;
