Add small styles for tournament component

--- a/src/components/Tournament.scss
+++ b/src/components/Tournament.scss
@@ -3,6 +3,7 @@
 .TournamentContainer {
   align-items: center;
   display: flex;
+  flex: 1 1 30%;
   flex-direction: column;
   margin-top: $u * 4;
 }
@@ -21,14 +22,25 @@
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 
     .Info {
-      height: 96px;
-      margin-top: -54px;
+      height: $u * 16;
+      margin-top: $u * -9;
     }
 
     .Overlay,
     .AdditionalInfo {
       display: flex;
     }
+
+    &.small {
+      .Info {
+        height: $u * 14;
+        margin-top: $u * -7;
+      }
+    }
+  }
+
+  &.small {
+    width: $u * 50;
   }
 }
 
@@ -36,7 +48,12 @@
   border-top-right-radius: $u;
   border-top-left-radius: $u;
   height: $u * 32;
-  width: 100%
+  vertical-align: middle;
+  width: 100%;
+
+  &.small {
+    height: $u * 27;
+  }
 }
 
 .Info {
@@ -49,6 +66,10 @@
   max-width: 330px;
   transition: 0.3s margin-top cubic-bezier(.25,.8,.25,1);
   width: 100%;
+
+  &.small {
+    width: $u * 46
+  }
 }
 
 .BaseInfo {
@@ -127,8 +148,8 @@
   top: 0;
 }
 
-.PrimaryButton {
-  background: linear-gradient(hsl(194, 90%, 54%), hsl(208, 90%, 54%));
+.PrimaryButton,
+.SecondaryButton {
   border-radius: 24px;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
   color: #fff;
@@ -144,32 +165,31 @@
   width: $u * 39;
 
   &:hover {
-    background: linear-gradient(hsl(192, 90%, 54%), hsl(206, 90%, 54%));
     box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.3);
+  }
+
+  &.small {
+    font-size: 10px;
+    padding: 6px 26px;
+    width: $u * 35;
+  }
+}
+
+.PrimaryButton {
+  background: linear-gradient(hsl(194, 90%, 54%), hsl(208, 90%, 54%));
+
+  &:hover {
+    background: linear-gradient(hsl(192, 90%, 54%), hsl(206, 90%, 54%));
   }
 }
 
 .SecondaryButton {
   background: transparent;
   border: 2px solid rgba(255, 255, 255, 0.6);
-  border-radius: 24px;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
-  color: #fff;
-  display: block;
-  font-size: 12px;
-  font-weight: bold;
-  letter-spacing: 1.4px;
-  margin-bottom: 12px;
-  padding: 8px 26px;
-  transition: all .1s ease-out;
-  text-align: center;
-  text-transform: uppercase;
-  width: $u * 39;
 
   &:hover {
     background-color: rgba(0, 0, 0, 0.3);
     border-color: $as-blue;
-    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.3);
   }
 }
 
