--- a/src/app.global.css
+++ b/src/app.global.css
@@ -28,6 +28,16 @@ a {
   text-decoration: none !important;
 }
 
+::-moz-selection { /* Code for Firefox */
+    color: #fff;
+    background: #2091f3;
+}
+
+::selection {
+    color: #fff;
+    background: #2091f3;
+}
+
 .content-container {
   bottom: 0;
   left: 54px;
