--- a/src/components/SideBar/TeamNav.scss
+++ b/src/components/SideBar/TeamNav.scss
@@ -24,3 +24,23 @@
     color: hsla(0,0%,100%,.75);
   }
 }
+
+.ScrollWrap {
+  display: flex;
+  flex-direction: column;
+}
+
+.Team {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  border-radius: 50%;
+  height: $u * 6;
+  margin-bottom: $u * 2;
+  transition: 0.2s all ease;
+  width: $u * 6;
+
+  &:hover {
+    border-radius: 15%;
+  }
+}
